--- a/arch/arm64/configs/b1c1_defconfig
+++ b/arch/arm64/configs/b1c1_defconfig
@@ -479,6 +479,7 @@ CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_S2MPB04=y
 CONFIG_GOOGLE_WLAN_MAC=y
+CONFIG_QCA_CLD_WLAN=y
 CONFIG_GSI=y
 CONFIG_IPA3=y
 CONFIG_RMNET_IPA3=y
